@@ -5,6 +5,9 @@ buildscript {
         mavenCentral()
         gradlePluginPortal()
         maven { url 'https://repo.spring.io/plugins-release-local' }
+        if (version.endsWith('SNAPSHOT')) {
+            maven { url 'https://repo.spring.io/snapshot' }
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
@@ -84,15 +87,15 @@ ext {
     lettuceVersion = '6.2.0.RELEASE'
     log4jVersion = '2.19.0'
     mailVersion = '2.0.1'
-	micrometerVersion = '1.10.0-M6'
-    micrometerTracingVersion = '1.0.0-M8'
+    micrometerVersion = '1.10.0-SNAPSHOT'
+    micrometerTracingVersion = '1.0.0-SNAPSHOT'
     mockitoVersion = '4.8.0'
     mongoDriverVersion = '4.7.1'
     mysqlVersion = '8.0.30'
     pahoMqttClientVersion = '1.2.5'
     postgresVersion = '42.5.0'
     r2dbch2Version = '1.0.0.RC1'
-    reactorVersion = '2022.0.0-M6'
+    reactorVersion = '2022.0.0-SNAPSHOT'
     resilience4jVersion = '1.7.1'
     romeToolsVersion = '1.18.0'
     rsocketVersion = '1.1.3'
@@ -534,7 +537,6 @@ project('spring-integration-core') {
             exclude group: 'io.opentelemetry'
             exclude group: 'com.wavefront'
             exclude group: 'io.micrometer', module: 'micrometer-tracing-bridge-otel'
-
         }
     }
 
