@@ -1,17 +1,21 @@
 ext {
 	backendVersion = '0.0.3'
+	micrometerDocsVersion='1.0.0-SNAPSHOT'
 }
 
 configurations {
 	asciidoctorExtensions
+	micrometerDocs
 }
 
 dependencies {
 	asciidoctorExtensions "io.spring.asciidoctor.backends:spring-asciidoctor-backends:$backendVersion"
+	micrometerDocs "io.micrometer:micrometer-docs-generator-spans:$micrometerDocsVersion"
+	micrometerDocs "io.micrometer:micrometer-docs-generator-metrics:$micrometerDocsVersion"
 }
 
 task checkAsciidocLinks {
-	inputs.dir("src/reference/asciidoc/")
+	inputs.dir('src/reference/asciidoc')
 	doLast {
 		def errors = new ArrayList<>();
 		errors.add('*** Anchor reference errors found:')
@@ -48,8 +52,42 @@ task checkAsciidocLinks {
 	}
 }
 
+def observationInputDir = file('spring-integration-core/src/main/java/org/springframework/integration/support/management/observation').absolutePath
+def generatedDocsDir = file("$buildDir/docs/generated").absolutePath
+
+task generateObservabilityMetricsDocs(type: JavaExec) {
+	inputs.dir(observationInputDir)
+	outputs.dir(generatedDocsDir)
+	classpath configurations.micrometerDocs
+	args observationInputDir, /.+/, generatedDocsDir
+	mainClass = 'io.micrometer.docs.metrics.DocsFromSources'
+}
+
+task generateObservabilitySpansDocs(type: JavaExec) {
+	inputs.dir(observationInputDir)
+	outputs.dir(generatedDocsDir)
+	classpath configurations.micrometerDocs
+	args observationInputDir, /.+/, generatedDocsDir
+	mainClass = 'io.micrometer.docs.spans.DocsFromSources'
+}
+
+task filterMetricsDocsContent(type: Copy) {
+	dependsOn generateObservabilitySpansDocs, generateObservabilityMetricsDocs
+	from generatedDocsDir
+	include '_*.adoc'
+	into generatedDocsDir
+	rename { filename -> filename.replace '_', '' }
+	filter { line -> line.replaceAll('org.springframework.integration', 'o.s.i') }
+}
+
+task prepareDocs(type: Copy) {
+	dependsOn checkAsciidocLinks, filterMetricsDocsContent
+	from 'src/reference/asciidoc'
+	into "$buildDir/docs"
+}
+
 asciidoctorPdf {
-	dependsOn checkAsciidocLinks
+	dependsOn prepareDocs
 
 	inProcess = JAVA_EXEC
 	forkOptions {
@@ -59,7 +97,7 @@ asciidoctorPdf {
 	baseDirFollowsSourceFile()
 
 	asciidoctorj {
-		sourceDir "src/reference/asciidoc/"
+		sourceDir "$buildDir/docs"
 		inputs.dir(sourceDir)
 		sources {
 			include 'index-single.adoc'
@@ -75,8 +113,28 @@ asciidoctorPdf {
 	}
 }
 
-asciidoctorj {
-	version = '2.5.2'
+asciidoctor {
+	dependsOn asciidoctorPdf
+
+	inProcess = JAVA_EXEC
+	forkOptions {
+		jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+	}
+
+	baseDirFollowsSourceFile()
+
+	configurations 'asciidoctorExtensions'
+	sourceDir "$buildDir/docs"
+	inputs.dir(sourceDir)
+	outputOptions {
+		backends 'spring-html'
+	}
+	resources {
+		from(sourceDir) {
+			include 'images/*', 'css/**', 'js/**'
+		}
+	}
+
 	options doctype: 'book', eruby: 'erubis'
 	attributes 'docinfo': 'shared',
 			stylesdir: 'css/',
@@ -95,27 +153,6 @@ asciidoctorj {
 			'toclevels': '4',
 			revnumber: project.version,
 			'project-version': project.version
-}
-
-asciidoctor {
-	dependsOn asciidoctorPdf
-	inProcess = JAVA_EXEC
-	forkOptions {
-		jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
-	}
-	baseDirFollowsSourceFile()
-	configurations 'asciidoctorExtensions'
-	sourceDir "src/reference/asciidoc/"
-	inputs.dir(sourceDir)
-	outputOptions {
-		backends "spring-html"
-	}
-	resources {
-		from(sourceDir) {
-			include 'images/*', 'css/**', 'js/**'
-		}
-	}
-
 }
 
 task reference(dependsOn: asciidoctor) {
