@@ -81,7 +81,7 @@ public abstract class AbstractMessageHandler extends MessageHandlerSupport
 		IntegrationObservation.HANDLER.observation(
 						this.observationConvention,
 						DefaultMessageReceiverObservationConvention.INSTANCE,
-						new MessageReceiverContext(message, getComponentName()),
+						() -> new MessageReceiverContext(message, getComponentName()),
 						observationRegistry)
 				.observe(() -> doHandleMessage(message));
 	}
