@@ -17,26 +17,21 @@
 package org.springframework.integration.support.management.observation;
 
 import io.micrometer.common.docs.KeyName;
-import io.micrometer.observation.docs.DocumentedObservation;
+import io.micrometer.observation.docs.ObservationDocumentation;
 
 /**
- * The {@link DocumentedObservation} implementation for Spring Integration infrastructure.
+ * The {@link ObservationDocumentation} implementation for Spring Integration infrastructure.
  *
  * @author Artem Bilan
  *
  * @since 6.0
  */
-public enum IntegrationObservation implements DocumentedObservation {
+public enum IntegrationObservation implements ObservationDocumentation {
 
 	/**
 	 * Observation for message handlers.
 	 */
 	HANDLER {
-		@Override
-		public String getName() {
-			return "spring.integration.handler";
-		}
-
 		@Override
 		public String getPrefix() {
 			return "spring.integration.";
